--- a/4-2-1.html
+++ b/4-2-1.html
@@ -5,6 +5,19 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<link rel="stylesheet" href="css/style.css" />
+		<script type="text/javascript" src="js/jquery.js" ></script>
+		<script>
+			$(function(){
+				$('#panel h5.head').bind('click',function(){
+					var $content = $(this).next();
+					if($content.is(':visible')){
+						$content.hide();
+					} else{
+					$(this).next().show();						
+					}
+				})
+			})
+		</script>
 	</head>
 
 	<body>
