--- a/4-3-3.html
+++ b/4-3-3.html
@@ -8,9 +8,9 @@
 		<script>
 			$(function(){
 				$('#panel h5.head').toggle(function(){
-					$(this).next().show()
+					$(this).next().toggle()
 				},function(){
-					$(this).next().hide()
+					$(this).next().toggle()
 				})
 			})
 		</script>
