--- a/4-3-2.html
+++ b/4-3-2.html
@@ -7,7 +7,7 @@
 		<script type="text/javascript" src="js/jquery.js" ></script>
 		<script>
 			$(function(){
-				$('#panel h5.head').hover(function(){
+				$('#panel h5.head').toggle(function(){
 					$(this).next().show()
 				},function(){
 					$(this).next().hide()
