--- a/4-4-1.html
+++ b/4-4-1.html
@@ -44,10 +44,14 @@
 				$('span').bind('click', function() {
 					var $txt = $('#msg').html() + "<p>内层span元素被点击</p>"
 					$('#msg').html($txt)
+//					event.stopPropagation()
+					return false
 				})
 				$('#content').bind('click',function(){
 					var $txt = $('#msg').html() +"<p>外层的div元素被点击</p>"
 					$('#msg').html($txt)
+					//event.stopPropagation()
+					return false
 				})
 				$('body').bind('click',function(){
 					var $txt = $('#msg').html() +"<p>body元素被点击</p>"
